sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: value estPasTrier
  estPasTrier=true
  ^AlgBubbleSort1:4: error: not found: value estPasTrier
  while (estPasTrier){
         ^